--- a/styles.css
+++ b/styles.css
@@ -211,11 +211,12 @@ h3 {
 }
 
 .student-image {
-    width: 300px;
-    height: 300px;
+    width:  350px;
+    height: 350px;
     object-fit: contain;
     border-radius: 10px;
     margin-bottom: 15px;
+    padding: 20px;
     background-color: var(--bg-tertiary);
 }
 
